# Qwen3-ASR-1.7B-benchmark-ov

./: .env.example  .gitignore  README.md  gradio_helper.py  prompt_versions.txt  pyproject.toml  qwen3-asr.html  qwen3-asr.ipynb  qwen3_asr_benchmark.py  qwen3_asr_benchmark_1.py  qwen3_asr_benchmark_experiment.py  qwen3_stream_vad.py  qwen3_stream_vad_no_context.py  qwen3_stream_vad_with_context.py  qwen_3_asr_helper.py  requirements.txt  stream_client.py
results/: exp_single_audio_20260626_final_try_metrics.jsonl  exp_single_audio_20260626_final_try_summary.txt  exp_single_audio_20260626_metrics.jsonl  exp_single_audio_20260626_ontology_metrics.jsonl  exp_single_audio_20260626_ontology_summary.txt  exp_single_audio_20260626_summary.txt  exp_single_audio_20260626_tuned_metrics.jsonl  exp_single_audio_20260626_tuned_summary.txt
